# collage

./: .gitmodules  CMakeLists.txt  Doxyfile.in  qml.qrc
glsl/: Cube.fs  Cube.vs  Default.fs  RayCasting.fs  RayCasting.vs  Rectangle.fs  Rectangle.vs  Triangle.fs  Triangle.vs
include/: BindTexture.h  BoundingBox.h  Camera.h  Canvas.h  ClearFramebuffer.h  Cube.h  Entity.h  Framebuffer.h  Image.h  ImageData.h  NearClippingRectangle.h  Octree.h  Rectangle.h  RenderBuffer.h  RenderPass.h  RendererElement.h  RendererProperty.h  Texture.h  Texture1D.h  Texture2D.h  Texture3D.h  Triangle.h  TurnTableCamera.h  Uniform.h  Uniforms.h  VisualizationFramebuffer.h  VisualizationRenderer.h  Volume.h
plugin/: CMakeLists.txt  qmldir
plugin/include/: BoundingBox.h  ClearFramebuffer.h  CollagePlugin.h  Cube.h  Entity.h  Framebuffer.h  Image.h  Octree.h  RenderBuffer.h  Renderer.h  RendererProperty.h  Texture1D.h  Texture2D.h  Texture3D.h  TurnTableCamera.h
plugin/src/: BindTexture.cpp  BoundingBox.cpp  Canvas.cpp  CollagePlugin.cpp  Cube.cpp  Entity.cpp  Image.cpp  ImageData.cpp  Octree.cpp  Rectangle.cpp  RenderBuffer.cpp  RenderPass.cpp  Renderer.cpp  Texture1D.cpp  Texture2D.cpp  Texture3D.cpp  Uniforms.cpp
qml/: PopupMenu.js  PopupMenu.qml  TransferFunctionEditor.qml  VolumeRenderer.qml  main.qml
samples/VolumeRenderer/: CMakeLists.txt  PopOver.h  PopupMenu.qml  TransferFunctionColorPicker.qml  TransferFunctionEditor.cpp  TransferFunctionEditor.h  TransferFunctionEditor.qml  VolumeRenderer.qml  main.cpp  main.qml  qml.qrc
samples/VolumeRenderer/glsl/: Cube.vs  RayCasting.fs  RayCasting.vs  RayEntry.vs  Rectangle.fs  Rectangle.vs
src/: BindTexture.cpp  BoundingBox.cpp  Camera.cpp  ClearFramebuffer.cpp  Cube.cpp  Entity.cpp  Framebuffer.cpp  Image.cpp  ImageData.cpp  NearClippingRectangle.cpp  Octree.cpp  PopOver.cpp  Rectangle.cpp  RenderBuffer.cpp  RenderPass.cpp  Renderer.cpp  RendererElement.cpp  Texture.cpp  Texture1D.cpp  Texture2D.cpp  Texture3D.cpp  Triangle.cpp  TurnTableCamera.cpp  Uniform.cpp  Uniforms.cpp  VisualizationFramebuffer.cpp  VisualizationRenderer.cpp  Volume.cpp  main.cpp
